--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Guiminamflix</title>
+    <title>TopFlix</title>
 </head>
 
 <body>
-    <header>GUIMINAMFLIX</header>
+    <header>TOPFLIX</header>
+
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO</h1>
-            <p>#homem-aranha</p>
+            <h1>iNTERESTELAR</h1>
+            <p>#espaço</p>
         </div>
 
         <div>
