--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div>
-            <iframe https://youtu.be/z1nTNg8FU6Q?si=sk_wp4EuFH1J0wxV</iframe>
+            <iframe <iframe width="560" height="315" src="https://www.youtube.com/embed/z1nTNg8FU6Q?si=DzTCwEBkYeV5Gx-X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></iframe>
         </div>
     </section>
 
